version/0.21/_sources/examples/00-fluent/mixing_elbow_settings_api.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-fluent/mixing_elbow_settings_api.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_00-fluent_mixing_elbow_settings_api.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-fluent_mixing_elbow_settings_api.py:

.. _ref_mixing_elbow_settings_api_beta:

Fluent setup and solution using settings objects
------------------------------------------------
This example sets up and solves a three-dimensional turbulent fluid flow
and heat transfer problem in a mixing elbow, which is common in piping
systems in power plants and process industries. Predicting the flow field
and temperature field in the area of the mixing region is important to
designing the junction properly.

This example uses settings objects.

**Problem description**

A cold fluid at 20 deg C flows into the pipe through a large inlet. It then mixes
with a warmer fluid at 40 deg C that enters through a smaller inlet located at
the elbow. The pipe dimensions are in inches, and the fluid properties and
boundary conditions are given in SI units. Because the Reynolds number for the
flow at the larger inlet is ``50, 800``, a turbulent flow model is required.

.. GENERATED FROM PYTHON SOURCE LINES 23-27

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports, which includes downloading and importing
the geometry file.

.. GENERATED FROM PYTHON SOURCE LINES 27-36

.. code-block:: Python


    import ansys.fluent.core as pyfluent
    from ansys.fluent.core import examples

    pyfluent.CONTAINER_MOUNT_PATH = pyfluent.EXAMPLES_PATH
    import_file_name = examples.download_file(
        "mixing_elbow.msh.h5", "pyfluent/mixing_elbow"
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/ansys/actions-runner/_work/pyfluent/pyfluent/src/ansys/fluent/core/examples/downloads.py:74: PyFluentUserWarning: 
    File already exists. File path:
    /home/ansys/.local/share/ansys_fluent_core/examples/mixing_elbow.msh.h5

      warnings.warn(




.. GENERATED FROM PYTHON SOURCE LINES 38-42

Launch Fluent
~~~~~~~~~~~~~
Launch Fluent as a service in solver mode with double precision running on
two processors.

.. GENERATED FROM PYTHON SOURCE LINES 42-49

.. code-block:: Python


    solver = pyfluent.launch_fluent(
        precision="double",
        processor_count=2,
        mode="solver",
    )








.. GENERATED FROM PYTHON SOURCE LINES 50-57

Import mesh and perform mesh check
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the mesh and perform a mesh check, which lists the minimum and maximum
x, y, and z values from the mesh in the default SI units of meters. The mesh
check also reports a number of other mesh features that are checked. Any errors
in the mesh are reported. Ensure that the minimum volume is not negative because
Fluent cannot begin a calculation when this is the case.

.. GENERATED FROM PYTHON SOURCE LINES 57-61

.. code-block:: Python


    solver.file.read_case(file_name=import_file_name)
    solver.mesh.check()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Fast-loading "/ansys_inc/v242/fluent/fluent24.2.0/addons/afd/lib/hdfio.bin"
    Done.

    Reading from 216ed86bba83:"/mnt/pyfluent/mixing_elbow.msh.h5" in NODE0 mode ...
      Reading mesh ...
           17279 cells,     1 cell zone  ...
              17279 mixed cells,  zone id: 87
           88336 faces,     7 face zones ...
               2170 polygonal wall faces,  zone id: 34
                267 polygonal wall faces,  zone id: 33
                155 polygonal pressure-outlet faces,  zone id: 32
                152 polygonal velocity-inlet faces,  zone id: 31
                 53 polygonal velocity-inlet faces,  zone id: 30
               2003 polygonal symmetry faces,  zone id: 29
              83536 mixed interior faces,  zone id: 89
           64580 nodes,     3 node zones ...

    Building...
         mesh
            distributing mesh
                    parts..,
                    faces..,
                    nodes..,
                    cells..,
            bandwidth reduction using Reverse Cuthill-McKee: 8123/282 = 28.805
      Reading boundary layer flags ...
      Done.

         materials,
         interface,
         domains,
         zones,
            Skipping thread 20 of domain 1 (not referenced by grid).
            Skipping thread 21 of domain 1 (not referenced by grid).
            Skipping thread 22 of domain 1 (not referenced by grid).
            Skipping thread 23 of domain 1 (not referenced by grid).
            Skipping thread 24 of domain 1 (not referenced by grid).
            Skipping thread 25 of domain 1 (not referenced by grid).
            Skipping thread 26 of domain 1 (not referenced by grid).
            Skipping thread 27 of domain 1 (not referenced by grid).
            Skipping thread 28 of domain 1 (not referenced by grid).
            wall-elbow
            wall-inlet
            outlet
            cold-inlet
            hot-inlet
            symmetry-xyplane
            interior--elbow-fluid
            elbow-fluid
         parallel,
    Done.
    Mesh is now scaled to meters.

     Domain Extents:
       x-coordinate: min (m) = -2.000000e-01, max (m) = 2.000000e-01
       y-coordinate: min (m) = -2.250000e-01, max (m) = 2.000000e-01
       z-coordinate: min (m) = 0.000000e+00, max (m) = 4.991846e-02
     Volume statistics:
       minimum volume (m3): 2.878063e-10
       maximum volume (m3): 5.958043e-07
         total volume (m3): 2.500807e-03
     Face area statistics:
       minimum face area (m2): 3.887492e-08
       maximum face area (m2): 8.240970e-05
     Checking mesh.....................................
    Done.




.. GENERATED FROM PYTHON SOURCE LINES 62-65

Enable heat transfer
~~~~~~~~~~~~~~~~~~~~
Enable heat transfer by activating the energy equation.

.. GENERATED FROM PYTHON SOURCE LINES 65-68

.. code-block:: Python


    solver.setup.models.energy.enabled = True








.. GENERATED FROM PYTHON SOURCE LINES 69-72

Create material
~~~~~~~~~~~~~~~
Create a material named ``"water-liquid"``.

.. GENERATED FROM PYTHON SOURCE LINES 72-75

.. code-block:: Python


    solver.setup.materials.database.copy_by_name(type="fluid", name="water-liquid")








.. GENERATED FROM PYTHON SOURCE LINES 76-80

Set up cell zone conditions
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set up the cell zone conditions for the fluid zone (``elbow-fluid``). Set ``material``
to ``"water-liquid"``.

.. GENERATED FROM PYTHON SOURCE LINES 80-83

.. code-block:: Python


    solver.setup.cell_zone_conditions.fluid["elbow-fluid"].general.material = "water-liquid"








.. GENERATED FROM PYTHON SOURCE LINES 84-88

Set up boundary conditions for CFD analysis
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set up the boundary conditions for the inlets, outlet, and walls for CFD
analysis.

.. GENERATED FROM PYTHON SOURCE LINES 88-126

.. code-block:: Python


    # cold inlet (cold-inlet), Setting: Value:
    # Velocity Specification Method: Magnitude, Normal to Boundary
    # Velocity Magnitude: 0.4 [m/s]
    # Specification Method: Intensity and Hydraulic Diameter
    # Turbulent Intensity: 5 [%]
    # Hydraulic Diameter: 4 [inch]
    # Temperature: 293.15 [K]
    cold_inlet = solver.setup.boundary_conditions.velocity_inlet["cold-inlet"]

    cold_inlet.momentum.velocity.value = 0.4
    cold_inlet.turbulence.turbulence_specification = "Intensity and Hydraulic Diameter"
    cold_inlet.turbulence.turbulent_intensity = 0.05
    cold_inlet.turbulence.hydraulic_diameter = "4 [in]"
    cold_inlet.thermal.temperature.value = 293.15

    # hot inlet (hot-inlet), Setting: Value:
    # Velocity Specification Method: Magnitude, Normal to Boundary
    # Velocity Magnitude: 1.2 [m/s]
    # Specification Method: Intensity and Hydraulic Diameter
    # Turbulent Intensity: 5 [%]
    # Hydraulic Diameter: 1 [inch]
    # Temperature: 313.15 [K]
    hot_inlet = solver.setup.boundary_conditions.velocity_inlet["hot-inlet"]

    hot_inlet.momentum.velocity.value = 1.2
    hot_inlet.turbulence.turbulence_specification = "Intensity and Hydraulic Diameter"
    hot_inlet.turbulence.hydraulic_diameter = "1 [in]"
    hot_inlet.thermal.temperature.value = 313.15

    # pressure outlet (outlet), Setting: Value:
    # Backflow Turbulent Intensity: 5 [%]
    # Backflow Turbulent Viscosity Ratio: 4

    solver.setup.boundary_conditions.pressure_outlet[
        "outlet"
    ].turbulence.turbulent_viscosity_ratio = 4





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/ansys/actions-runner/_work/pyfluent/pyfluent/src/ansys/fluent/core/solver/flobject.py:591: DeprecatedSettingWarning: Note: A newer syntax is available to perform the last operation:
    solver.setup.boundary_conditions.pressure_outlet['outlet'].turbulence.backflow_turbulent_viscosity_ratio = 4
      warnings.warn(




.. GENERATED FROM PYTHON SOURCE LINES 127-130

Disable plotting of residuals during calculation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Disable plotting of residuals during the calculation.

.. GENERATED FROM PYTHON SOURCE LINES 130-133

.. code-block:: Python


    solver.solution.monitor.residual.options.plot = False








.. GENERATED FROM PYTHON SOURCE LINES 134-137

Initialize flow field
~~~~~~~~~~~~~~~~~~~~~
Initialize the flow field using hybrid initialization.

.. GENERATED FROM PYTHON SOURCE LINES 137-140

.. code-block:: Python


    solver.solution.initialization.hybrid_initialize()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Initialize using the hybrid initialization method.

    Checking case topology... 
    -This case has both inlets & outlets 
    -Pressure information is not available at the boundaries.
     Case will be initialized with constant pressure

            iter            scalar-0

            1               1.000000e+00
            2               1.772613e-04
            3               1.190212e-05
            4               1.186528e-05
            5               2.332822e-06
            6               2.911047e-06
            7               5.508169e-07
            8               6.254469e-07
            9               1.697930e-07
            10              1.777489e-07

    Hybrid initialization is done.




.. GENERATED FROM PYTHON SOURCE LINES 141-144

Solve for 150 iterations
~~~~~~~~~~~~~~~~~~~~~~~~
Solve for 150 iterations.

.. GENERATED FROM PYTHON SOURCE LINES 144-147

.. code-block:: Python


    solver.solution.run_calculation.iterate(iter_count=150)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
         1  1.0000e+00  4.1943e-03  4.5989e-03  1.1598e-03  8.7452e-05  1.0049e-01  7.4700e-01  0:00:38  149
         2  8.1198e-01  2.5627e-03  3.1429e-03  7.1413e-04  1.0204e-04  5.8538e-02  1.0753e-01  0:00:37  148
         3  7.8780e-01  1.6433e-03  2.3414e-03  6.1917e-04  1.1043e-04  2.1219e-02  6.7526e-02  0:00:36  147
         4  7.6175e-01  1.0958e-03  2.0266e-03  5.0692e-04  1.1962e-04  1.8340e-02  4.2618e-02  0:00:35  146
         5  7.2601e-01  9.3249e-04  1.8875e-03  4.4277e-04  1.2567e-04  1.7010e-02  2.8689e-02  0:00:34  145
         6  6.6649e-01  8.8637e-04  1.7770e-03  4.0081e-04  1.2799e-04  1.6598e-02  2.1477e-02  0:00:35  144
         7  6.0286e-01  8.3203e-04  1.6992e-03  3.6856e-04  1.2680e-04  1.6557e-02  1.7743e-02  0:00:34  143
         8  5.4606e-01  7.7241e-04  1.6284e-03  3.4239e-04  1.2314e-04  1.7143e-02  1.4888e-02  0:00:34  142
         9  4.9303e-01  7.2189e-04  1.5626e-03  3.1996e-04  1.1639e-04  1.7769e-02  1.2645e-02  0:00:33  141
        10  4.5820e-01  6.8689e-04  1.4872e-03  3.0196e-04  1.0779e-04  1.8123e-02  1.0852e-02  0:00:32  140
        11  4.2666e-01  6.5536e-04  1.3971e-03  2.8633e-04  9.8103e-05  1.8074e-02  9.4904e-03  0:00:31  139

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        12  3.9575e-01  6.2368e-04  1.3062e-03  2.7235e-04  8.7143e-05  1.7645e-02  8.4285e-03  0:00:31  138
        13  3.6816e-01  5.9442e-04  1.2102e-03  2.5954e-04  7.5362e-05  1.6824e-02  7.5149e-03  0:00:30  137
        14  3.4459e-01  5.6645e-04  1.1155e-03  2.4615e-04  6.3889e-05  1.5655e-02  6.6649e-03  0:00:30  136
        15  3.2039e-01  5.3728e-04  1.0177e-03  2.3360e-04  5.4347e-05  1.4230e-02  5.8935e-03  0:00:30  135
        16  3.0067e-01  5.0690e-04  9.2578e-04  2.2114e-04  4.7220e-05  1.2700e-02  5.2223e-03  0:00:29  134
        17  2.8514e-01  4.7714e-04  8.3760e-04  2.0988e-04  4.2153e-05  1.1143e-02  4.6007e-03  0:00:29  133
        18  2.7104e-01  4.4725e-04  7.5716e-04  2.0056e-04  3.8949e-05  9.6394e-03  4.0485e-03  0:00:28  132
        19  2.5840e-01  4.1807e-04  6.8818e-04  1.9288e-04  3.5994e-05  8.3091e-03  3.5945e-03  0:00:28  131
        20  2.4559e-01  3.8964e-04  6.2896e-04  1.8569e-04  3.2748e-05  7.1272e-03  3.2379e-03  0:00:28  130
        21  2.3340e-01  3.6125e-04  5.8040e-04  1.7890e-04  2.9435e-05  6.0809e-03  2.9314e-03  0:00:28  129
        22  2.2234e-01  3.3627e-04  5.4371e-04  1.7260e-04  2.6034e-05  5.1804e-03  2.6646e-03  0:00:27  128

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        23  2.1247e-01  3.1269e-04  5.1654e-04  1.6652e-04  2.2851e-05  4.4070e-03  2.4358e-03  0:00:27  127
        24  2.0074e-01  2.9047e-04  4.9496e-04  1.6014e-04  1.9941e-05  3.7719e-03  2.2369e-03  0:00:27  126
        25  1.8904e-01  2.6961e-04  4.7489e-04  1.5347e-04  1.7292e-05  3.2835e-03  2.0600e-03  0:00:27  125
        26  1.7850e-01  2.4974e-04  4.5490e-04  1.4632e-04  1.4897e-05  2.9231e-03  1.8996e-03  0:00:26  124
        27  1.6884e-01  2.3142e-04  4.3249e-04  1.3858e-04  1.2834e-05  2.6407e-03  1.7524e-03  0:00:26  123
        28  1.5898e-01  2.1479e-04  4.0952e-04  1.3049e-04  1.1028e-05  2.3949e-03  1.6076e-03  0:00:26  122
        29  1.4925e-01  1.9856e-04  3.8421e-04  1.2223e-04  9.5268e-06  2.1708e-03  1.4743e-03  0:00:25  121
        30  1.3973e-01  1.8330e-04  3.5851e-04  1.1406e-04  8.2850e-06  1.9643e-03  1.3539e-03  0:00:25  120
        31  1.3000e-01  1.6879e-04  3.3375e-04  1.0616e-04  7.2177e-06  1.7836e-03  1.2440e-03  0:00:25  119
        32  1.2089e-01  1.5497e-04  3.1002e-04  9.8366e-05  6.2895e-06  1.6303e-03  1.1454e-03  0:00:25  118
        33  1.1213e-01  1.4204e-04  2.8808e-04  9.0712e-05  5.4932e-06  1.5022e-03  1.0563e-03  0:00:24  117

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        34  1.0433e-01  1.2992e-04  2.6694e-04  8.3341e-05  4.8208e-06  1.3838e-03  9.7773e-04  0:00:24  116
        35  9.7015e-02  1.1873e-04  2.4712e-04  7.6401e-05  4.2589e-06  1.2755e-03  9.0692e-04  0:00:23  115
        36  9.0521e-02  1.0837e-04  2.2859e-04  6.9896e-05  3.7853e-06  1.1776e-03  8.4168e-04  0:00:23  114
        37  8.3760e-02  9.8837e-05  2.1061e-04  6.3851e-05  3.3765e-06  1.0900e-03  7.8132e-04  0:00:23  113
        38  7.7677e-02  9.0166e-05  1.9411e-04  5.8300e-05  3.0202e-06  1.0114e-03  7.2406e-04  0:00:23  112
        39  7.2047e-02  8.2260e-05  1.7905e-04  5.3273e-05  2.7180e-06  9.4103e-04  6.7113e-04  0:00:23  111
        40  6.6748e-02  7.5076e-05  1.6500e-04  4.8709e-05  2.4530e-06  8.7488e-04  6.2069e-04  0:00:22  110
        41  6.1712e-02  6.8413e-05  1.5180e-04  4.4486e-05  2.2188e-06  8.1533e-04  5.7352e-04  0:00:22  109
        42  5.7066e-02  6.2262e-05  1.3962e-04  4.0598e-05  2.0105e-06  7.6025e-04  5.2938e-04  0:00:22  108
        43  5.2886e-02  5.6739e-05  1.2832e-04  3.7057e-05  1.8267e-06  7.0873e-04  4.8852e-04  0:00:22  107
        44  4.8880e-02  5.1583e-05  1.1796e-04  3.3863e-05  1.6614e-06  6.6084e-04  4.5030e-04  0:00:22  106

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        45  4.5104e-02  4.6975e-05  1.0838e-04  3.0955e-05  1.5140e-06  6.1508e-04  4.1502e-04  0:00:22  105
        46  4.1652e-02  4.2695e-05  9.9419e-05  2.8297e-05  1.3809e-06  5.7136e-04  3.8236e-04  0:00:22  104
        47  3.8443e-02  3.8834e-05  9.1080e-05  2.5879e-05  1.2610e-06  5.3049e-04  3.5160e-04  0:00:22  103
        48  3.5267e-02  3.5344e-05  8.3571e-05  2.3673e-05  1.1529e-06  4.9184e-04  3.2354e-04  0:00:22  102
        49  3.2404e-02  3.2141e-05  7.6814e-05  2.1652e-05  1.0547e-06  4.5464e-04  2.9782e-04  0:00:22  101
        50  2.9818e-02  2.9233e-05  7.0495e-05  1.9813e-05  9.6468e-07  4.1907e-04  2.7341e-04  0:00:22  100
        51  2.7431e-02  2.6573e-05  6.4560e-05  1.8133e-05  8.8177e-07  3.8488e-04  2.5034e-04  0:00:22   99
        52  2.5206e-02  2.4156e-05  5.9049e-05  1.6599e-05  8.0671e-07  3.5302e-04  2.2869e-04  0:00:22   98
        53  2.3156e-02  2.1967e-05  5.3972e-05  1.5200e-05  7.3782e-07  3.2329e-04  2.0872e-04  0:00:21   97
        54  2.1276e-02  1.9982e-05  4.9251e-05  1.3921e-05  6.7427e-07  2.9534e-04  1.9027e-04  0:00:21   96
        55  1.9555e-02  1.8179e-05  4.4914e-05  1.2753e-05  6.1507e-07  2.6915e-04  1.7307e-04  0:00:21   95

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        56  1.7978e-02  1.6530e-05  4.0912e-05  1.1680e-05  5.6085e-07  2.4513e-04  1.5717e-04  0:00:20   94
        57  1.6560e-02  1.5038e-05  3.7242e-05  1.0697e-05  5.1083e-07  2.2324e-04  1.4273e-04  0:00:20   93
        58  1.5235e-02  1.3679e-05  3.3871e-05  9.7966e-06  4.6490e-07  2.0300e-04  1.2952e-04  0:00:19   92
        59  1.3999e-02  1.2444e-05  3.0800e-05  8.9721e-06  4.2254e-07  1.8466e-04  1.1744e-04  0:00:19   91
        60  1.2829e-02  1.1316e-05  2.8005e-05  8.2162e-06  3.8359e-07  1.6822e-04  1.0640e-04  0:00:22   90
        61  1.1741e-02  1.0291e-05  2.5463e-05  7.5225e-06  3.4783e-07  1.5323e-04  9.6381e-05  0:00:22   89
        62  1.0740e-02  9.3566e-06  2.3133e-05  6.8842e-06  3.1512e-07  1.3932e-04  8.7276e-05  0:00:21   88
        63  9.8100e-03  8.5060e-06  2.0998e-05  6.2960e-06  2.8497e-07  1.2663e-04  7.9009e-05  0:00:20   87
        64  8.9567e-03  7.7326e-06  1.9046e-05  5.7543e-06  2.5746e-07  1.1506e-04  7.1480e-05  0:00:19   86
        65  8.1762e-03  7.0266e-06  1.7264e-05  5.2569e-06  2.3225e-07  1.0449e-04  6.4602e-05  0:00:19   85
        66  7.4629e-03  6.3825e-06  1.5636e-05  4.7996e-06  2.0923e-07  9.4830e-05  5.8340e-05  0:00:18   84

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        67  6.8018e-03  5.7942e-06  1.4144e-05  4.3779e-06  1.8827e-07  8.5956e-05  5.2628e-05  0:00:18   83
        68  6.1967e-03  5.2590e-06  1.2789e-05  3.9899e-06  1.6916e-07  7.7866e-05  4.7419e-05  0:00:25   82
        69  5.6410e-03  4.7710e-06  1.1556e-05  3.6335e-06  1.5174e-07  7.0454e-05  4.2673e-05  0:00:23   81
        70  5.1259e-03  4.3250e-06  1.0441e-05  3.3054e-06  1.3592e-07  6.3660e-05  3.8355e-05  0:00:22   80
        71  4.6519e-03  3.9188e-06  9.4225e-06  3.0042e-06  1.2146e-07  5.7432e-05  3.4428e-05  0:00:20   79
        72  4.2180e-03  3.5483e-06  8.4935e-06  2.7275e-06  1.0843e-07  5.1730e-05  3.0874e-05  0:00:19   78
        73  3.8232e-03  3.2120e-06  7.6482e-06  2.4732e-06  9.6632e-08  4.6526e-05  2.7655e-05  0:00:18   77
        74  3.4628e-03  2.9056e-06  6.8804e-06  2.2402e-06  8.5958e-08  4.1792e-05  2.4749e-05  0:00:17   76
        75  3.1334e-03  2.6256e-06  6.1838e-06  2.0269e-06  7.6330e-08  3.7502e-05  2.2120e-05  0:00:17   75
        76  2.8324e-03  2.3705e-06  5.5517e-06  1.8313e-06  6.7674e-08  3.3601e-05  1.9753e-05  0:00:16   74
        77  2.5568e-03  2.1393e-06  4.9788e-06  1.6525e-06  5.9899e-08  3.0071e-05  1.7622e-05  0:00:16   73

      iter  continuity  x-velocity  y-velocity  z-velocity      energy           k       omega     time/iter
        78  2.3040e-03  1.9293e-06  4.4613e-06  1.4896e-06  5.2930e-08  2.6882e-05  1.5707e-05  0:00:15   72
        79  2.0750e-03  1.7394e-06  3.9942e-06  1.3412e-06  4.6694e-08  2.4005e-05  1.3986e-05  0:00:15   71
        80  1.8649e-03  1.5671e-06  3.5718e-06  1.2061e-06  4.1125e-08  2.1405e-05  1.2443e-05  0:00:14   70
        81  1.6752e-03  1.4109e-06  3.1914e-06  1.0833e-06  3.5810e-08  1.8929e-05  1.0968e-05  0:00:14   69
        82  1.5026e-03  1.2679e-06  2.8526e-06  9.7142e-07  3.1584e-08  1.6888e-05  9.7654e-06  0:00:14   68
        83  1.3433e-03  1.1429e-06  2.5475e-06  8.7326e-07  2.7763e-08  1.5033e-05  8.6889e-06  0:00:13   67
        84  1.2065e-03  1.0275e-06  2.2725e-06  7.8259e-07  2.4340e-08  1.3359e-05  7.7120e-06  0:00:13   66
        85  1.0825e-03  9.2271e-07  2.0253e-06  7.0027e-07  2.1289e-08  1.1855e-05  6.8348e-06  0:00:13   65
        86  9.6979e-04  8.2827e-07  1.8039e-06  6.2586e-07  1.8437e-08  1.0440e-05  6.0060e-06  0:00:12   64
    !   86 solution is converged




.. GENERATED FROM PYTHON SOURCE LINES 148-153

Configure graphics picture export
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Since Fluent is being run without the GUI, we will need to export plots as
picture files. Edit the picture settings to use a custom resolution so that
the images are large enough.

.. GENERATED FROM PYTHON SOURCE LINES 153-161

.. code-block:: Python


    graphics = solver.results.graphics
    # use_window_resolution option not active inside containers or Ansys Lab environment
    if graphics.picture.use_window_resolution.is_active():
        graphics.picture.use_window_resolution = False
    graphics.picture.x_resolution = 1920
    graphics.picture.y_resolution = 1440








.. GENERATED FROM PYTHON SOURCE LINES 162-166

Create velocity vectors
~~~~~~~~~~~~~~~~~~~~~~~
Create and display velocity vectors on the ``symmetry-xyplane`` plane, then
export the image for inspection.

.. GENERATED FROM PYTHON SOURCE LINES 166-184

.. code-block:: Python


    graphics = solver.results.graphics

    graphics.vector["velocity_vector_symmetry"] = {}
    velocity_symmetry = solver.results.graphics.vector["velocity_vector_symmetry"]
    velocity_symmetry.print_state()
    velocity_symmetry.field = "velocity-magnitude"
    velocity_symmetry.surfaces_list = [
        "symmetry-xyplane",
    ]
    velocity_symmetry.scale.scale_f = 4
    velocity_symmetry.style = "arrow"
    velocity_symmetry.display()

    graphics.views.restore_view(view_name="front")
    graphics.views.auto_scale()
    graphics.picture.save_picture(file_name="velocity_vector_symmetry.png")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    name : velocity_vector_symmetry
    field : velocity-magnitude
    vector_field : velocity
    scale : 
      auto_scale : True
      scale_f : 1
    style : 3d arrow
    skip : 0
    vector_opt : 
      in_plane : False
      fixed_length : False
      x_comp : True
      y_comp : True
      z_comp : True
      scale_head : 0.3
      tessellation : 24
      color : 
    range_option : 
      option : auto-range-on
      auto_range_on : 
        global_range : True
    color_map : 
      visible : True
      size : 100
      color : field-velocity
      log_scale : False
      format : %0.2e
      user_skip : 9
      show_all : True
      position : 1
      font_name : Helvetica
      font_automatic : True
      font_size : 0.032
      length : 0.54
      width : 6.0
      bground_transparent : True
      bground_color : #CCD3E2
      title_elements : Variable and Object Name
    display_state_name : None




.. GENERATED FROM PYTHON SOURCE LINES 185-188

.. image:: /_static/mixing_elbow_016.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 190-193

Compute mass flow rate
~~~~~~~~~~~~~~~~~~~~~~
Compute the mass flow rate.

.. GENERATED FROM PYTHON SOURCE LINES 193-205

.. code-block:: Python

    solver.solution.report_definitions.flux["mass_flow_rate"] = {}

    mass_flow_rate = solver.solution.report_definitions.flux["mass_flow_rate"]
    mass_flow_rate.boundaries.allowed_values()
    mass_flow_rate.boundaries = [
        "cold-inlet",
        "hot-inlet",
        "outlet",
    ]
    mass_flow_rate.print_state()
    solver.solution.report_definitions.compute(report_defs=["mass_flow_rate"])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    name : mass_flow_rate
    report_type : flux-massflow
    boundaries : 
      0 : cold-inlet
      1 : hot-inlet
      2 : outlet
    per_zone : False
    average_over : 1
    retain_instantaneous_values : False
    output_parameter : False

          mass_flow_rate




.. GENERATED FROM PYTHON SOURCE LINES 206-209

Close Fluent
~~~~~~~~~~~~
Close Fluent.

.. GENERATED FROM PYTHON SOURCE LINES 209-211

.. code-block:: Python


    solver.exit()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    -------------------------------- -------------------
                      mass_flow_rate      -7.0991748e-06





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 55.435 seconds)


.. _sphx_glr_download_examples_00-fluent_mixing_elbow_settings_api.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: mixing_elbow_settings_api.ipynb <mixing_elbow_settings_api.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: mixing_elbow_settings_api.py <mixing_elbow_settings_api.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
